--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "template-template",
-  "version": "0.1.1",
+  "name": "counter-hooks",
+  "version": "0.1.2",
   "private": true,
   "dependencies": {
-    "@binaris/shift-babel-macro": "0.0.3",
-    "@binaris/shift-db": "^0.1.2",
-    "@binaris/shift-fetch-runtime": "0.0.2",
-    "@binaris/shift-local-proxy": "0.0.4",
+    "@reshuffle/code-transform": "0.0.3",
+    "@reshuffle/db": "^0.5.3",
+    "@reshuffle/fetch-runtime": "0.0.5",
+    "@reshuffle/local-proxy": "^0.2.12",
+    "@reshuffle/server-function": "0.0.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
@@ -16,10 +17,13 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src"
+    "lint": "eslint backend && stylelint src/**/*.css"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard"
   },
   "browserslist": {
     "production": [
@@ -33,7 +37,9 @@
       "last 1 safari version"
     ]
   },
+  "license": "MIT",
   "devDependencies": {
-    "cypress": "^3.4.0"
+    "stylelint": "^10.1.0",
+    "stylelint-config-standard": "^18.3.0"
   }
 }
